src/themes.scss
/* ... */
body.has-body .highlight-and-share-wrapper.orientation-vertical {
	display: inline-flex;
	flex-wrap: wrap;
	flex-direction: column;

	&.has-label {
		& > div {

			a {
				display: block;
				width: 100%;
			}
		}
	}
}
body.has-body .highlight-and-share-wrapper:not(.theme-off) a,
body.has-body .highlight-and-share-wrapper:not(.theme-off) a:hover,
body.has-body .highlight-and-share-wrapper:not(.theme-off) a:visited {
	font-family: 'FranklinGothic', Helvetica, sans-serif;
	font-weight: bold;
	text-transform: uppercase;
	letter-spacing: 0.150em;
	font-size: 14px;
	letter-spacing: .2em;
	color: #f8f8f8;
	display: inline-flex;
	height: 100%;
	padding: 12px 20px;
	text-decoration: none;
	transition: all 0.35s ease-in-out;
}
.has-inline-text {
	background-color: rgb(255, 239, 177);
	color: black;
	cursor: pointer;
}
.has-inline-text:hover {
	background-color: rgb(252, 214, 60);
}

/* Theme Branded (icons only) */
.highlight-and-share-wrapper.theme-brand-colors div {
	padding: 10px;
	background: #32CCFE;
	-moz-transition: background-color 200ms;
	-o-transition: background-color 200ms;
	-webkit-transition: background-color 200ms;
	transition: background-color 200ms;
	z-index: 1000;
	margin-right: 5px;
	margin-bottom: 10px;
}
.highlight-and-share-wrapper.theme-brand-colors div:last-child {
    margin-right: 0;
}
.highlight-and-share-wrapper.theme-brand-colors div.has_facebook {
	background: #3c5a9e;
}
.highlight-and-share-wrapper.theme-brand-colors div.has_linkedin {
    background: #0085AE;
}
.highlight-and-share-wrapper.theme-brand-colors div.has_ok {
    background: #ee8208;
}
.highlight-and-share-wrapper.theme-brand-colors div.has_vk {
    background: #2372f5;
}
.highlight-and-share-wrapper.theme-brand-colors div.has_pinterest {
    background: #CC2127;
}
.highlight-and-share-wrapper.theme-brand-colors div.has_copy {
    background: #222222;
}
.highlight-and-share-wrapper.theme-brand-colors div.has_email {
    background: #0074a2;
}
.highlight-and-share-wrapper.theme-brand-colors div.hax_xing {
    background: #0074a2;
}
.highlight-and-share-wrapper.theme-brand-colors div.has_whatsapp {
    background: #04e26a;
}
.highlight-and-share-wrapper.theme-brand-colors div.has_reddit {
	background: #FF4500;
}
.highlight-and-share-wrapper.theme-brand-colors div.has_telegram {
	background: #278fd6;
}
.highlight-and-share-wrapper.theme-brand-colors div.has_signal {
	background: #3a76f0;
}
.highlight-and-share-wrapper.theme-brand-colors span.has-text {
	display: none;
}
.highlight-and-share-wrapper.theme-brand-colors div.has_twitter:hover {
	background: #00aced;
}
.highlight-and-share-wrapper.theme-brand-colors div.has_facebook:hover {
	background: #1F3C83;
}
.highlight-and-share-wrapper.theme-brand-colors div.has_linkedin:hover {
    background: #23a0c7;
}
.highlight-and-share-wrapper.theme-brand-colors div.has_ok:hover {
    background: #dc7909;
}
.highlight-and-share-wrapper.theme-brand-colors div.has_vk:hover {
    background: #256be0;
}
.highlight-and-share-wrapper.theme-brand-colors div.has_pinterest:hover {
    background: #d93238;
}
.highlight-and-share-wrapper.theme-brand-colors div.has_copy:hover {
    background: #333333;
}
.highlight-and-share-wrapper.theme-brand-colors div.has_email:hover {
    background: #1388b7;
}
.highlight-and-share-wrapper.theme-brand-colors div.has_xing:hover {
    background: #1388b7;
}
.highlight-and-share-wrapper.theme-brand-colors div.has_whatsapp:hover {
    background: #02b857;
}
.highlight-and-share-wrapper.theme-brand-colors div.has_reddit:hover {
	background: #eb4407;
}
.highlight-and-share-wrapper.theme-brand-colors div.has_telegram:hover {
	background: #2587ca;
}
.highlight-and-share-wrapper.theme-brand-colors div.has_telegram:hover {
	background: #366ee1;
}
body.has-body .highlight-and-share-wrapper.theme-brand-colors a,
body.has-body .highlight-and-share-wrapper.theme-brand-colors a:hover,
body.has-body .highlight-and-share-wrapper.theme-brand-colors a:visited {
	font-family: 'FranklinGothic', Helvetica, sans-serif;
	font-weight: bold;
	text-transform: uppercase;
	letter-spacing: 0.150em;
	font-size: 14px;
	letter-spacing: .2em;
	color: #FFF;
	height: 100%;
	padding: 12px 20px;
	text-decoration: none;
}

/* Size of the box and margin */
div.highlight-and-share-wrapper.theme-brand-colors div {
	margin-right: 0;
	padding: 0;
}

/* Theme White */
div.highlight-and-share-wrapper.theme-white div {
	margin-right: 0;
	padding: 0;
}
div.highlight-and-share-wrapper.theme-white div.has_twitter,
div.highlight-and-share-wrapper.theme-white div.has_facebook,
div.highlight-and-share-wrapper.theme-white div.has_linkedin,
div.highlight-and-share-wrapper.theme-white div.has_ok,
div.highlight-and-share-wrapper.theme-white div.has_vk,
div.highlight-and-share-wrapper.theme-white div.has_pinterest,
div.highlight-and-share-wrapper.theme-white div.has_email,
div.highlight-and-share-wrapper.theme-white div.has_xing,
div.highlight-and-share-wrapper.theme-white div.has_whatsapp,
div.highlight-and-share-wrapper.theme-white div.has_copy,
div.highlight-and-share-wrapper.theme-white div.has_reddit,
div.highlight-and-share-wrapper.theme-white div.has_telegram,
div.highlight-and-share-wrapper.theme-white div.has_signal
 {
	background: #FFF;
}
/* ... */

